--- a/src/html/fund-page.html
+++ b/src/html/fund-page.html
@@ -16,16 +16,17 @@
                 <div class="row" id="user-profile">
                     <div class="col-xs-12">
                         <div class="card profile-with-cover">
-                            <div class="card-img-top img-fluid bg-cover height-300" style="background: url('../../../app-assets/images/carousel/22.jpg') 50%;"></div>
+                            <div class="card-img-top img-fluid bg-cover height-300" style="background: url('../../../app-assets/images/carousel/tabletochki.jpg') 50%;"></div>
+                            <div class="cover-shadow"></div>
                             <div class="media profil-cover-details">
                                 <div class="media-left pl-2 pt-2">
                                     <a href="#" class="profile-image">
-                                        <img src="../../../app-assets/images/portrait/small/avatar-s-8.png" class="rounded-circle img-border height-100" alt="Card image">
+                                        <img src="../../../app-assets/images/logo/tablet-bigr.jpg" class="img-border height-100" alt="Card image">
                                     </a>
                                 </div>
                                 <div class="media-body media-middle row">
                                     <div class="col-xs-6">
-                                        <h3 class="card-title">Jose Diaz</h3>
+                                        <h3 class="card-title">Фонд "Таблєточки"</h3>
                                     </div>
                                 </div>
                             </div>
@@ -33,20 +34,11 @@
                                 <button class="navbar-toggler hidden-sm-up" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar2" aria-controls="exCollapsingNavbar2" aria-expanded="false" aria-label="Toggle navigation"></button>
                                 <div class="collapse navbar-toggleable-xs" id="exCollapsingNavbar2">
                                     <ul class="nav navbar-nav float-xs-right">
-                                        <li class="nav-item active">
-                                            <a class="nav-link" href="#"><i class="fa-line-chart"></i> Timeline <span class="sr-only">(current)</span></a>
+                                        <li class="nav-item">
+                                            <a class="nav-link" href="#about-fund"><i class="fa fa-briefcase"></i> Про фонд</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="#"><i class="ft-user"></i> Profile</a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a class="nav-link" href="#"><i class="fa fa-briefcase"></i> Projects</a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a class="nav-link" href="#"><i class="fa fa-heart-o"></i> Favourites</a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a class="nav-link" href="#"><i class="fa fa-bell-o"></i> Notifications</a>
+                                            <a class="nav-link" href="#fund-subprojects"><i class="fa fa-heart-o"></i> Потребують допомоги</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -54,7 +46,7 @@
                         </div>
                         <div class="card">
                             <div class="card-header">
-                                <h4 class="card-title">Про фонд</h4>
+                                <h4 id="about-fund" class="card-title">Про фонд</h4>
                                 <a class="heading-elements-toggle"><i class="fa fa-ellipsis-v font-medium-3"></i></a>
                                 <div class="heading-elements">
                                     <ul class="list-inline mb-0">
@@ -78,22 +70,35 @@
                                         roll jelly tart icing bear claw. Gingerbread brownie sweet
                                         roll cheesecake chocolate cake jelly beans marzipan gummies
                                         dessert.
+
+                                        <a href="#" class="" id="type-info">Наприклад я закрив модальне вікно і перевів гроші фонду</a>
+
                                     </p>
-                                    <p>Oat cake ice cream candy chocolate cake chocolate cake cotton
-                                        candy dragée apple pie. Brownie carrot cake candy canes bonbon
-                                        fruitcake topping halvah. Cake sweet roll cake cheesecake cookie
-                                        chocolate cake liquorice. Apple pie sugar plum powder donut
-                                        soufflé.
-                                    </p>
-                                    <p>Dessert jelly-o jelly dessert jujubes croissant. Marshmallow
-                                        pudding pastry halvah dessert apple pie caramels bonbon toffee.
-                                        Jelly beans brownie sweet bear claw biscuit. Marshmallow jelly
-                                        gummies marzipan tootsie roll topping.</p>
-                                    <p>Cotton candy wafer powder bonbon topping. Sugar plum danish tootsie
-                                        roll jelly tart icing bear claw. Gingerbread brownie sweet
-                                        roll cheesecake chocolate cake jelly beans marzipan gummies
-                                        dessert.
-                                    </p>
+                                </div>
+                                <div class="card-block  my-gallery" itemscope="" itemtype="http://schema.org/ImageGallery" data-pswp-uid="1">
+                                    <div class="row">
+                                        <h4 class="card-title col-sm-12">Робота фонду</h4>
+                                        <figure class="col-lg-3 col-md-6 col-xs-12" itemprop="associatedMedia" itemscope="" itemtype="http://schema.org/ImageObject">
+                                            <a href="../../../app-assets/images/gallery/1.jpg" itemprop="contentUrl" data-size="480x360">
+                                                <img class="img-thumbnail img-fluid" src="http://lorempixel.com/480/360/nature/1" itemprop="thumbnail" alt="Image description">
+                                            </a>
+                                        </figure>
+                                        <figure class="col-lg-3 col-md-6 col-xs-12" itemprop="associatedMedia" itemscope="" itemtype="http://schema.org/ImageObject">
+                                            <a href="../../../app-assets/images/gallery/1.jpg" itemprop="contentUrl" data-size="480x360">
+                                                <img class="img-thumbnail img-fluid" src="http://lorempixel.com/480/360/nature/2" itemprop="thumbnail" alt="Image description">
+                                            </a>
+                                        </figure>
+                                        <figure class="col-lg-3 col-md-6 col-xs-12" itemprop="associatedMedia" itemscope="" itemtype="http://schema.org/ImageObject">
+                                            <a href="../../../app-assets/images/gallery/1.jpg" itemprop="contentUrl" data-size="480x360">
+                                                <img class="img-thumbnail img-fluid" src="http://lorempixel.com/480/360/nature/3" itemprop="thumbnail" alt="Image description">
+                                            </a>
+                                        </figure>
+                                        <figure class="col-lg-3 col-md-6 col-xs-12" itemprop="associatedMedia" itemscope="" itemtype="http://schema.org/ImageObject">
+                                            <a href="../../../app-assets/images/gallery/4.jpg" itemprop="contentUrl" data-size="480x360">
+                                                <img class="img-thumbnail img-fluid" src="http://lorempixel.com/480/360/nature/1" itemprop="thumbnail" alt="Image description">
+                                            </a>
+                                        </figure>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -103,11 +108,14 @@
                 <div class="row" id="image-grid">
                     <div class="col-xs-12">
                         <section class="card">
+                            <div class="card-header">
+                                <h4 id="fund-subprojects" class="card-title">Потребують допомоги:</h4>
+                            </div>
                             <div class="card-body collapse in">
                                 <div class="card-block my-gallery" itemscope="" itemtype="http://schema.org/ImageGallery">
                                     <div class="row">
                                         <div class="grid-hover">
-                                            <div class="col-md-3 col-sm-6 col-xs-12">
+                                            <div class="col-sm-4 col-xs-12">
                                                 <figure class="effect-sarah">
                                                     <img src="http://lorempixel.com/400/300/people/1" alt="img02">
                                                     <figcaption>
@@ -120,7 +128,7 @@
                                                     </figcaption>
                                                 </figure>
                                             </div>
-                                            <div class="col-md-3 col-sm-6 col-xs-12">
+                                            <div class="col-sm-4 col-xs-12">
                                                 <figure class="effect-sarah">
                                                     <img src="http://lorempixel.com/400/300/people/2" alt="img02">
                                                     <figcaption>
@@ -133,7 +141,24 @@
                                                     </figcaption>
                                                 </figure>
                                             </div>
-                                            <div class="col-md-3 col-sm-6 col-xs-12">
+                                            <div class="col-sm-4 col-xs-12">
+                                                <figure class="effect-sarah">
+                                                    <img src="http://lorempixel.com/400/300/people/5" alt="img02">
+                                                    <figcaption>
+                                                        <h2>Holy
+                                                            <span>Sadie</span>
+                                                        </h2>
+                                                        <p>Sadie never took her eyes off me.
+                                                            <br>She had a dark soul.</p>
+                                                        <a href="#">View more</a>
+                                                    </figcaption>
+                                                </figure>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="grid-hover">
+                                            <div class="col-sm-4 col-xs-12">
                                                 <figure class="effect-sarah">
                                                     <img src="http://lorempixel.com/400/300/people/3" alt="img02">
                                                     <figcaption>
@@ -146,9 +171,22 @@
                                                     </figcaption>
                                                 </figure>
                                             </div>
-                                            <div class="col-md-3 col-sm-6 col-xs-12">
+                                            <div class="col-sm-4 col-xs-12">
                                                 <figure class="effect-sarah">
                                                     <img src="http://lorempixel.com/400/300/people/4" alt="img02">
+                                                    <figcaption>
+                                                        <h2>Holy
+                                                            <span>Sadie</span>
+                                                        </h2>
+                                                        <p>Sadie never took her eyes off me.
+                                                            <br>She had a dark soul.</p>
+                                                        <a href="#">View more</a>
+                                                    </figcaption>
+                                                </figure>
+                                            </div>
+                                            <div class="col-sm-4 col-xs-12">
+                                                <figure class="effect-sarah">
+                                                    <img src="http://lorempixel.com/400/300/people/6" alt="img02">
                                                     <figcaption>
                                                         <h2>Holy
                                                             <span>Sadie</span>
@@ -185,6 +223,7 @@
     <!-- BEGIN PAGE VENDOR JS-->
     <script src="../../../app-assets/vendors/js/charts/chart.min.js" type="text/javascript"></script>
     <script src="../../../app-assets/vendors/js/extensions/jquery.knob.min.js" type="text/javascript"></script>
+    <script src="../../../app-assets/vendors/js/extensions/toastr.min.js" type="text/javascript"></script>
     <!-- END PAGE VENDOR JS-->
     <!-- BEGIN STACK JS-->
     <script src="../../../app-assets/js/core/app-menu.js" type="text/javascript"></script>
@@ -192,6 +231,7 @@
     <!-- END STACK JS-->
     <!-- BEGIN PAGE LEVEL JS-->
     <script src="../../../app-assets/js/scripts/charts/user-stats.js" type="text/javascript"></script>
+    <script src="../../../app-assets/js/scripts/extensions/toastr.js" type="text/javascript"></script>
 
     <!-- END PAGE LEVEL JS-->
   </body>
