--- a/src/html/login.html
+++ b/src/html/login.html
@@ -14,28 +14,26 @@
         <div class="card border-grey border-lighten-3 px-1 py-1 m-0">
             <div class="card-header no-border">
                 <div class="card-title text-xs-center">
-                    <img src="../../../app-assets/images/logo/stack-logo-dark.png" alt="branding logo">
+                    <img alt="stack admin logo" src="app-assets/images/logo/stack-logo.png" class="brand-logo"> Ж.В.
                 </div>
-                <h6 class="card-subtitle line-on-side text-muted text-xs-center font-small-3 pt-2"><span>Easily Using</span></h6>
+                <h6 class="card-subtitle line-on-side text-muted text-xs-center font-small-3 pt-2"><span>Швидкий вхід</span></h6>
             </div>
             <div class="card-body collapse in">
                 <div class="text-xs-center">
                     <a href="#" class="btn btn-social-icon mr-1 mb-1 btn-outline-facebook"><span class="fa fa-facebook"></span></a>
                     <a href="#" class="btn btn-social-icon mr-1 mb-1 btn-outline-twitter"><span class="fa fa-twitter"></span></a>
-                    <a href="#" class="btn btn-social-icon mr-1 mb-1 btn-outline-linkedin"><span class="fa fa-linkedin font-medium-4"></span></a>
-                    <a href="#" class="btn btn-social-icon mr-1 mb-1 btn-outline-github"><span class="fa fa-github font-medium-4"></span></a>
                 </div>
-                <p class="card-subtitle line-on-side text-muted text-xs-center font-small-3 mx-2 my-1"><span>OR Using Account Details</span></p>
+                <p class="card-subtitle line-on-side text-muted text-xs-center font-small-3 mx-2 my-1"><span>або використовуючи логін</span></p>
                 <div class="card-block">
                     <form class="form-horizontal" action="index.html" novalidate>
                         <fieldset class="form-group position-relative has-icon-left">
-                            <input type="text" class="form-control" id="user-name" placeholder="Your Username" required>
+                            <input type="text" class="form-control" id="user-name" placeholder="Ваш логін" required>
                             <div class="form-control-position">
                                 <i class="ft-user"></i>
                             </div>
                         </fieldset>
                         <fieldset class="form-group position-relative has-icon-left">
-                            <input type="password" class="form-control" id="user-password" placeholder="Enter Password" required>
+                            <input type="password" class="form-control" id="user-password" placeholder="Ваш пароль" required>
                             <div class="form-control-position">
                                 <i class="fa fa-key"></i>
                             </div>
@@ -44,17 +42,17 @@
                             <div class="col-md-6 col-xs-12 text-xs-center text-sm-left">
                                 <fieldset>
                                     <input type="checkbox" id="remember-me" class="chk-remember">
-                                    <label for="remember-me"> Remember Me</label>
+                                    <label for="remember-me"> Запам'ятати мене</label>
                                 </fieldset>
                             </div>
-                            <div class="col-md-6 col-xs-12 float-sm-left text-xs-center text-sm-right"><a href="recover-password.html" class="card-link">Forgot Password?</a></div>
+                            <div class="col-md-6 col-xs-12 float-sm-left text-xs-center text-sm-right"><a href="recover-password.html" class="card-link">Забули пароль?</a></div>
                         </fieldset>
-                        <button type="submit" class="btn btn-outline-primary btn-block"><i class="ft-unlock"></i> Login</button>
+                        <button type="submit" class="btn btn-outline-primary btn-block"><i class="ft-unlock"></i> Вхід</button>
                     </form>
                 </div>
-                <p class="card-subtitle line-on-side text-muted text-xs-center font-small-3 mx-2 my-1"><span>New to Stack ?</span></p>
+                <p class="card-subtitle line-on-side text-muted text-xs-center font-small-3 mx-2 my-1"><span>Не зареєстровані?</span></p>
                 <div class="card-block">
-                    <a href="register-with-bg-image.html" class="btn btn-outline-danger btn-block"><i class="ft-user"></i> Register</a>
+                    <a href="register.html" class="btn btn-outline-danger btn-block"><i class="ft-user"></i> Реєстрація</a>
                 </div>
             </div>
         </div>
