--- a/src/html/not-logged-index.html
+++ b/src/html/not-logged-index.html
@@ -28,14 +28,25 @@
                         <img alt="stack admin logo" src="../../../app-assets/images/logo/stack-logo.png" class="brand-logo">
                         <h2 class="brand-text">Ж.В.</h2>
                     </a>
+                    <span class="muted-text small-text intro-header-text">Тут такий коротенький текст вступу і все таке. Бла бла бла.</span>
                 </li>
             </ul>
             <ul class="nav navbar-nav float-xs-right">
               <li class="nav-item">
-                шото
+                  <section id="block-sociallinksblock" class="block block-sociallinks-block clearfix">
+                      <ul>
+                          <li><a href="#" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                          <li><a href="#" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                          <li><a href="#" target="_blank"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
+                      </ul>
+                  </section>
               </li>
               <li class="nav-item">
-                шото2
+                  <div class="list-group list-group-flush site-stats">
+                      <a href="#" class="list-group-item"><i class="fa fa fa-users"></i> 300 учасників</a>
+                      <a href="#" class="list-group-item"><i class="fa fa-check-square-o"></i> 20 завдань</a>
+                      <a href="#" class="list-group-item"><i class="fa fa-thumbs-o-up"></i> 180000 грн. передано до фондів</a>
+                  </div>
               </li>
             </ul>
           </div>
