--- a/src/html/parts/fund-list.html
+++ b/src/html/parts/fund-list.html
@@ -16,13 +16,13 @@
                     <div class="card-deck-wrapper">
                         <div class="card-deck">
                             <figure class="card card-img-top border-grey border-lighten-2">
-                                <a href="#" data-toggle="modal" data-target="#primary"><img class="gallery-thumbnail card-img-top" src="https://dummyimage.com/640x480/ccc/ffffff.png&text=Лого" itemprop="thumbnail" alt="Image description"></a>
+                                <a href="#" data-toggle="modal" data-target="#primary"><img class="gallery-thumbnail card-img-top" src="http://lorempixel.com/400/300/cats/1" itemprop="thumbnail" alt="Image description"></a>
                                 <div class="card-block px-0">
                                     <a href="#" class="notification-text font-small-3 text-muted">Про фонд</a>
                                 </div>
                             </figure>
                             <figure class="card card-img-top border-grey border-lighten-2">
-                                <a href="../../../app-assets/images/gallery/1.jpg"><img class="gallery-thumbnail card-img-top" src="https://dummyimage.com/640x480/ccc/ffffff.png&text=Лого" itemprop="thumbnail" alt="Image description"></a>
+                                <a href="#"><img class="gallery-thumbnail card-img-top" src="http://lorempixel.com/400/300/cats/2" itemprop="thumbnail" alt="Image description"></a>
                                 <div class="card-block px-0">
                                     <a href="#" class="notification-text font-small-3 text-muted">Про фонд</a>
                                 </div>
@@ -32,13 +32,13 @@
                     <div class="card-deck-wrapper">
                         <div class="card-deck">
                             <figure class="card card-img-top border-grey border-lighten-2">
-                                <a href="#"><img class="gallery-thumbnail card-img-top" src="https://dummyimage.com/640x480/ccc/ffffff.png&text=Лого" itemprop="thumbnail" alt="Image description"></a>
+                                <a href="#"><img class="gallery-thumbnail card-img-top" src="http://lorempixel.com/400/300/cats/3" itemprop="thumbnail" alt="Image description"></a>
                                 <div class="card-block px-0">
                                     <a href="#" class="notification-text font-small-3 text-muted">Про фонд</a>
                                 </div>
                             </figure>
                             <figure class="card card-img-top border-grey border-lighten-2">
-                                <a href="../../../app-assets/images/gallery/1.jpg"><img class="gallery-thumbnail card-img-top" src="https://dummyimage.com/640x480/ccc/ffffff.png&text=Лого" itemprop="thumbnail" alt="Image description"></a>
+                                <a href=""><img class="gallery-thumbnail card-img-top" src="http://lorempixel.com/400/300/cats/4" itemprop="thumbnail" alt="Image description"></a>
                                 <div class="card-block px-0">
                                     <a href="#" class="notification-text font-small-3 text-muted">Про фонд</a>
                                 </div>
@@ -55,29 +55,13 @@
                     <div class="card-deck-wrapper">
                         <div class="card-deck">
                             <figure class="card card-img-top border-grey border-lighten-2">
-                                <a href="#"><img class="gallery-thumbnail card-img-top" src="https://dummyimage.com/640x480/ccc/ffffff.png&text=Лого" itemprop="thumbnail" alt="Image description"></a>
+                                <a href="#"><img class="gallery-thumbnail card-img-top" src="http://lorempixel.com/400/300/cats/5" itemprop="thumbnail" alt="Image description"></a>
                                 <div class="card-block px-0">
                                     <a href="#" class="notification-text font-small-3 text-muted">Про фонд</a>
                                 </div>
                             </figure>
                             <figure class="card card-img-top border-grey border-lighten-2">
-                                <a href="../../../app-assets/images/gallery/1.jpg"><img class="gallery-thumbnail card-img-top" src="https://dummyimage.com/640x480/ccc/ffffff.png&text=Лого" itemprop="thumbnail" alt="Image description"></a>
-                                <div class="card-block px-0">
-                                    <a href="#" class="notification-text font-small-3 text-muted">Про фонд</a>
-                                </div>
-                            </figure>
-                        </div>
-                    </div>
-                    <div class="card-deck-wrapper">
-                        <div class="card-deck">
-                            <figure class="card card-img-top border-grey border-lighten-2">
-                                <a href="#"><img class="gallery-thumbnail card-img-top" src="https://dummyimage.com/640x480/ccc/ffffff.png&text=Лого" itemprop="thumbnail" alt="Image description"></a>
-                                <div class="card-block px-0">
-                                    <a href="#" class="notification-text font-small-3 text-muted">Про фонд</a>
-                                </div>
-                            </figure>
-                            <figure class="card card-img-top border-grey border-lighten-2">
-                                <a href="../../../app-assets/images/gallery/1.jpg"><img class="gallery-thumbnail card-img-top" src="https://dummyimage.com/640x480/ccc/ffffff.png&text=Лого" itemprop="thumbnail" alt="Image description"></a>
+                                <a href="#"><img class="gallery-thumbnail card-img-top" src="http://lorempixel.com/400/300/cats/10" itemprop="thumbnail" alt="Image description"></a>
                                 <div class="card-block px-0">
                                     <a href="#" class="notification-text font-small-3 text-muted">Про фонд</a>
                                 </div>
@@ -87,13 +71,29 @@
                     <div class="card-deck-wrapper">
                         <div class="card-deck">
                             <figure class="card card-img-top border-grey border-lighten-2">
-                                <a href="#"><img class="gallery-thumbnail card-img-top" src="https://dummyimage.com/640x480/ccc/ffffff.png&text=Лого" itemprop="thumbnail" alt="Image description"></a>
+                                <a href="#"><img class="gallery-thumbnail card-img-top" src="http://lorempixel.com/400/300/cats/6" itemprop="thumbnail" alt="Image description"></a>
                                 <div class="card-block px-0">
                                     <a href="#" class="notification-text font-small-3 text-muted">Про фонд</a>
                                 </div>
                             </figure>
                             <figure class="card card-img-top border-grey border-lighten-2">
-                                <a href="../../../app-assets/images/gallery/1.jpg"><img class="gallery-thumbnail card-img-top" src="https://dummyimage.com/640x480/ccc/ffffff.png&text=Лого" itemprop="thumbnail" alt="Image description"></a>
+                                <a href="#"><img class="gallery-thumbnail card-img-top" src="http://lorempixel.com/400/300/cats/7" itemprop="thumbnail" alt="Image description"></a>
+                                <div class="card-block px-0">
+                                    <a href="#" class="notification-text font-small-3 text-muted">Про фонд</a>
+                                </div>
+                            </figure>
+                        </div>
+                    </div>
+                    <div class="card-deck-wrapper">
+                        <div class="card-deck">
+                            <figure class="card card-img-top border-grey border-lighten-2">
+                                <a href="#"><img class="gallery-thumbnail card-img-top" src="http://lorempixel.com/400/300/cats/8" itemprop="thumbnail" alt="Image description"></a>
+                                <div class="card-block px-0">
+                                    <a href="#" class="notification-text font-small-3 text-muted">Про фонд</a>
+                                </div>
+                            </figure>
+                            <figure class="card card-img-top border-grey border-lighten-2">
+                                <a href="#"><img class="gallery-thumbnail card-img-top" src="http://lorempixel.com/400/300/cats/9" itemprop="thumbnail" alt="Image description"></a>
                                 <div class="card-block px-0">
                                     <a href="#" class="notification-text font-small-3 text-muted">Про фонд</a>
                                 </div>
