--- a/src/html/parts/head.html
+++ b/src/html/parts/head.html
@@ -15,6 +15,12 @@
     <link rel="stylesheet" type="text/css" href="app-assets/fonts/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="app-assets/fonts/simple-line-icons/style.min.css">
     <link rel="stylesheet" type="text/css" href="app-assets/vendors/css/extensions/pace.css">
+    <link rel="stylesheet" type="text/css" href="app-assets/vendors/css/forms/icheck/icheck.css">
+    <link rel="stylesheet" type="text/css" href="app-assets/vendors/css/forms/icheck/custom.css">
+
+    <link rel="stylesheet" type="text/css" href="app-assets/vendors/css/extensions/sweetalert.css">
+    <link rel="stylesheet" type="text/css" href="../../../app-assets/vendors/css/extensions/toastr.css">
+
     <!-- END VENDOR CSS-->
     <!-- BEGIN STACK CSS-->
     <link rel="stylesheet" type="text/css" href="app-assets/css/bootstrap-extended.css">
@@ -25,7 +31,9 @@
     <link rel="stylesheet" type="text/css" href="app-assets/css/core/menu/menu-types/vertical-menu.css">
     <link rel="stylesheet" type="text/css" href="app-assets/css/core/menu/menu-types/vertical-overlay-menu.css">
     <link rel="stylesheet" type="text/css" href="app-assets/css/pages/gallery.css">
-    <!-- link(rel='stylesheet', type='text/css', href='app-assets/css#{rtl}/pages/users.css')-->
+    <link rel="stylesheet" type="text/css" href="app-assets/css/pages/login-register.css">
+    <link rel='stylesheet' type='text/css'  href='app-assets/css/pages/users.css'>
+    <link rel="stylesheet" type="text/css" href="app-assets/css/plugins/extensions/toastr.css">
     <!-- END Page Level CSS-->
     <!-- BEGIN Custom CSS-->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
