--- a/src/html/task-page.html
+++ b/src/html/task-page.html
@@ -115,6 +115,9 @@
 
                                             <p>Возвращайся ты лучше в свою безопасную страну». Не послушавшись рукописи, наш текст продолжил свой путь. Вскоре ему повстречался коварный составитель</p>
                                         </div>
+                                        <div class="col-md-3 col-sm-6 mb-2 mt-2">
+                                            <button type="button" class="btn btn-lg btn-block btn-outline-success " id="type-success">Например все</button>
+                                        </div>
                                     </div>
                                 </div>
                             <!-- END OF USERS TASKS LIST -->
@@ -175,6 +178,9 @@
     <script src="../../../app-assets/vendors/js/charts/chart.min.js" type="text/javascript"></script>
     <script src="../../../app-assets/vendors/js/extensions/jquery.knob.min.js" type="text/javascript"></script>
     <script src="../../../app-assets/vendors/js/ui/jquery.sticky.js" type="text/javascript"></script>
+    <script src="../../../app-assets/vendors/js/extensions/sweetalert.min.js" type="text/javascript"></script>
+
+
     <!-- END PAGE VENDOR JS-->
     <!-- BEGIN STACK JS-->
     <script src="../../../app-assets/js/core/app-menu.js" type="text/javascript"></script>
@@ -183,6 +189,8 @@
     <!-- BEGIN PAGE LEVEL JS-->
     <script src="../../../app-assets/js/scripts/charts/user-stats.js" type="text/javascript"></script>
     <script src="../../../app-assets/js/scripts/pages/sidebar.js" type="text/javascript"></script>
+
+    <script src="../../../app-assets/js/scripts/extensions/sweet-alerts.js" type="text/javascript"></script>
 
     <!-- END PAGE LEVEL JS-->
 
