--- a/src/html/recover-password.html
+++ b/src/html/recover-password.html
@@ -3,7 +3,7 @@
 
 <!--(bake parts/head.html title="Відновлення паролю")-->
 
-  <body data-open="click" data-menu="vertical-menu" data-col="1-column" class="vertical-layout vertical-menu 1-column  blank-page blank-page">
+  <body data-open="click" data-menu="vertical-menu" data-col="1-column" class="vertical-layout vertical-menu 1-column  blank-page blank-page recover-password-page">
     <!-- ////////////////////////////////////////////////////////////////////////////-->
     <div class="app-content content container-fluid">
       <div class="content-wrapper">
@@ -14,26 +14,26 @@
         <div class="card border-grey border-lighten-3 px-2 py-2 m-0">
             <div class="card-header no-border pb-0">
                 <div class="card-title text-xs-center">
-                    <img src="../../../app-assets/images/logo/stack-logo-dark.png" alt="branding logo">
+                    <img alt="stack admin logo" src="app-assets/images/logo/stack-logo.png" class="brand-logo"> Ж.В.
                 </div>
-                <h6 class="card-subtitle line-on-side text-muted text-xs-center font-small-3 pt-2"><span>We will send you a link to reset password.</span></h6>
+                <h6 class="card-subtitle line-on-side text-muted text-xs-center font-small-3 pt-2"><span>Ви отримаєте на свій email подальші інструкції</span></h6>
             </div>
             <div class="card-body collapse in">
                 <div class="card-block">
-                    <form class="form-horizontal" action="login-simple.html" novalidate>
+                    <form class="form-horizontal" action="login.html" novalidate>
                         <fieldset class="form-group position-relative has-icon-left">
-                            <input type="email" class="form-control form-control-lg input-lg" id="user-email" placeholder="Your Email Address" required>
+                            <input type="email" class="form-control form-control-lg input-lg" id="user-email" placeholder="Ваш email" required>
                             <div class="form-control-position">
                                 <i class="ft-mail"></i>
                             </div>
                         </fieldset>
-                        <button type="submit" class="btn btn-outline-primary btn-lg btn-block"><i class="ft-unlock"></i> Recover Password</button>
+                        <button type="submit" class="btn btn-outline-primary btn-lg btn-block"><i class="ft-unlock"></i> Відновити пароль</button>
                     </form>
                 </div>
             </div>
             <div class="card-footer no-border">
-                <p class="float-sm-left text-xs-center"><a href="login-simple.html" class="card-link">Login</a></p>
-                <p class="float-sm-right text-xs-center">New to Stack ? <a href="register-simple.html" class="card-link">Create Account</a></p>
+                <p class="float-sm-left text-xs-center"><a href="login.html" class="card-link">Вхід</a></p>
+                <p class="float-sm-right text-xs-center">Не зареєстровані? <a href="register.html" class="card-link">Зареєструватись</a></p>
             </div>
         </div>
     </div>
