--- a/src/html/under-maintenance.html
+++ b/src/html/under-maintenance.html
@@ -3,32 +3,30 @@
 
   <!--(bake parts/head.html title="Сервіс на обслуговуванні. Ми скоро повернемось. Дякуємо за розуміння")-->
 
-  <body data-open="click" data-menu="vertical-menu" data-col="1-column" class="vertical-layout vertical-menu 1-column bg-maintenance-image blank-page blank-page">
+  <body data-open="click" data-menu="vertical-menu" data-col="1-column" class="vertical-layout vertical-menu 1-column bg-maintenance-image blank-page blank-page offline-page">
     <!-- ////////////////////////////////////////////////////////////////////////////-->
     <div class="app-content content container-fluid">
       <div class="content-wrapper">
         <div class="content-header row">
         </div>
         <div class="content-body"><section class="flexbox-container">
-    <div class="col-md-6 offset-md-3 col-xs-12 p-0">
+    <div class="col-md-4 offset-md-4 col-xs-10 offset-xs-1 box-shadow-2 p-0">
         <div class="card border-grey border-lighten-3 px-1 py-1 box-shadow-3">
             <div class="card-block">
                 <span class="card-title text-xs-center">
-        			<img src="../../../app-assets/images/logo/stack-logo-dark-big.png" class="img-fluid mx-auto d-block pt-2" width="250" alt="logo">
+        			<img alt="stack admin logo" src="app-assets/images/logo/stack-logo.png" class="img-fluid mx-auto d-block pt-2" >
         		</span>
             </div>
             <div class="card-block text-xs-center">
-                <h3>This page is under maintenance</h3>
-                <p>We're sorry for the inconvenience.
-                    <br> Please check back later.</p>
+                <h3>Вибачте. Сервіс тимчасово не доступний</h3>
+                <p>Дякуємо за ваше терпіння.
+                    <br> Ми повернемось дуже швидко.</p>
                 <div class="mt-2"><i class="fa fa-cog spinner font-large-2"></i></div>
             </div>
             <hr>
             <p class="socialIcon card-text text-xs-center pt-2 pb-2">
                 <a href="#" class="btn btn-social-icon mr-1 mb-1 btn-outline-facebook"><span class="fa fa-facebook"></span></a>
                 <a href="#" class="btn btn-social-icon mr-1 mb-1 btn-outline-twitter"><span class="fa fa-twitter"></span></a>
-                <a href="#" class="btn btn-social-icon mr-1 mb-1 btn-outline-linkedin"><span class="fa fa-linkedin font-medium-4"></span></a>
-                <a href="#" class="btn btn-social-icon mr-1 mb-1 btn-outline-github"><span class="fa fa-github font-medium-4"></span></a>
             </p>
         </div>
     </div>
